--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Recetas</title>
     <link rel="stylesheet" href="estilos.css">
+    <style>
+        body {
+          background-color: rgb(0, 229, 255);
+        }
+      </style>
 </head>
 <body>
     <header>
@@ -33,6 +38,21 @@
         <section>
             <h2>Preparación</h2>
             <p>Se pican todos los ingredientes, se mezclan y listo!</p>
+        </section>
+        <section>
+            <h2>Pasos a seguir para preparar una ensalada</h2>
+            <article>
+                <p>A continuación describimos los procedimientos a seguir para la preparación de una ensalada:</p>
+                <ol>
+                    <li>Elige la variedad de hortaliza por su valor nutricional, además de por su sabor, color, textura y aspecto.</li>
+                    <li>Compra la verdura más fresca y de mejor calidad que encuentres.</li>
+                    <li>Asegúrate de que los ingredientes están secos. Es un paso muy importante, especialmente para las delicadas hojas de la ensalada, pues el aliño no empapará una hoja húmeda y la ensalada puede quedar con exceso de agua.</li>
+                    <li>Intenta que cada bocado contenga distintos elementos, como hojas de lechuga, verduras, hierbas aromáticas, trozos crujientes, trozos fibrosos, trozos jugosos y una pizca de dulzor (con fruta o con el aliño) para equilibrar sabores y texturas.</li>
+                    <li>Las hojas más delicadas combinan mejor con un aliño fresco y ligero, mientras que las ensaladas con hojas e ingredientes más consistentes soportan mejor aliños fuertes, más espesos, intensos o cremosos.</li>
+                    <li>Si vas a servir la ensalada con el aliño ya incorporado, añádelo poco a poco para no anegarla. Excepto para las que lleven col, un ingrediente que se beneficia de un aliño temprano, condimenta la ensalada en el último minuto.</li>
+                    <li>Añade algún toque final para que la ensalada sea más atractiva.</li>
+                </ol>
+            </article>
         </section>
     </main>
     <footer>
